--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         <activity android:name=".Business" />
         <activity android:name=".Hotel">
         <activity android:name=".Business.Business" />
-        <activity android:name=".Business.Business_Restaurants" />
+        <activity android:name=".Business.Business_Inmobiliaries" />
         <activity android:name=".Business.Business_Perruqueries" />
         <activity android:name=".Business.Business_Botigues"></activity>
     </application>
