--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Business" />
-        <activity android:name=".Hotel">
+        <activity android:name=".Hotel"/>
         <activity android:name=".Business.Business" />
         <activity android:name=".Business.Business_Inmobiliaries" />
         <activity android:name=".Business.Business_Perruqueries" />
