--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         <activity android:name=".Business.Business_Inmobiliaries" />
         <activity android:name=".Business.Business_Perruqueries" />
         <activity android:name=".Business.Business_Botigues" />
-        <activity android:name=".Movies"></activity>
+        <activity android:name=".Movies" />
+        <activity android:name=".activity_money"></activity>
     </application>
 
 </manifest>
